name: jhabber
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: utf8-string -any, stm -any, random -any,
               pureMD5 ==1.1.0.0, parsec ==2.1.0.1, network-bytestring -any,
               network -any, mtl -any, hslogger -any, hex -any, haskell98 -any,
               dataenc -any, containers -any, bytestring -any, binary -any,
               base ==4.2.0.2, MaybeT -any, HUnit -any
stability:
homepage:
package-url:
bug-reports:
synopsis: A Jabber server in haskell
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: jhabber
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Connection ConnectionManager Database
               Listener LocalRouter RoutingTable Sasl TextUtils WorkerPool Xml
               XmlParse Xmpp
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: